# oxidized

./: .gitignore  Cargo.toml  build.rs  ci  run
src/: main.rs  prelude.rs  ser.rs  util.rs
src/commands/: brainfuck.rs  easteregg.rs  filter.rs  games.rs  meta.rs  mod.rs  owner.rs  util.rs
src/commands/play/: connect4.rs  elo.rs  mcts.rs  minimax.rs  mod.rs  pentago.rs  random_ai.rs  runner.rs  tictactoe.rs  ultimate.rs  util.rs
src/commands/play/ultimate/: ai.rs  mod.rs
