[package]
name = "oxidized"
version = "0.8.1"
authors = ["Jonas Maier"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.
rand = "0.7.3"
rand_pcg = "0.2.1"
rusqlite = "0.24"
chrono = "0.4"
lazy_static = "1.4"
async-trait = "0.1"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "collector", "framework", "standard_framework", "rustls_backend"]
version = "0.10"

[build-dependencies]
chrono = "0.4"

